--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23420,6 +23420,62 @@
 "~^/.*/1207589878917.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207589878917.jpg";
 "~^/.*/1207537958915.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207537958915.jpg";
 "~^/.*/1207535806166.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207535806166.jpg";
+"~^/.*/docs/fiction/1207536290905.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207536290905.jpg";
+"~^/.*/docs/fiction/1207534917462.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207534917462.jpg";
+"~^/.*/docs/fiction/1207528097546.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207528097546.jpg";
+"~^/.*/docs/fiction/1207526654803.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207526654803.jpg";
+"~^/.*/docs/fiction/1207526290530.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207526290530.jpg";
+
+"~^/Bodys$" "/Crops#figures";
+"~^/Body$" "/Crops#figures";
+"~^/docs/psychology/1967-zubin%20comparativepsychopathology.pdf.*$" "/docs/psychology/1967-zubin-comparativepsychopathology.pdf";
+"~^/docs/statistics/decision/1938-fisher.pdfbibtex.*$" "/docs/statistics/decision/1938-fisher.pdf";
+"~^/docs/psychology/okcupid/raceandattraction20092014.htmlht.*$" "/docs/psychology/okcupid/raceandattraction20092014.html";
+"~^/docs/[a-km-z].*/Genshiken.*$" "/fiction/Genshiken";
+"~^/Sort1008The-sort.*$" "/Sort";
+"~^/images/2012-10-29-tumblr_mcn2iagj8r1re0dy6o1_640.png.*$" "/images/hardtruthsfromsoftcats.tumblr.com/2012-10-29-tumblr_mcn2iagj8r1re0dy6o1_640.png";
+"~^/images/2012-10-08-tumblr_mbjppit1gl1re0dy6o1_640.png.*$" "/images/hardtruthsfromsoftcats.tumblr.com/2012-10-08-tumblr_mbjppit1gl1re0dy6o1_640.png";
+"~^/epq_process.php_files/surveyresults_graph_libertarians3.png.*$" "/docs/personal/2011-gwern-yourmorals.org/epq_process.php_files/surveyresults_graph_libertarians3.png";
+"~^/docs/technology/stevensinstitureoftechnology-satmnewsletter$" "/docs/technology/stevensinstituteoftechnology-satmnewsletter/index";
+"~^/docs/technology/stevensinstitureoftechnology$" "/docs/technology/stevensinstituteoftechnology-satmnewsletter/index";
+"~^/docs/technology/stevensinstitureoftechnology-satmnewsletter/v11-citm-vol11spring07.pdf$" "/docs/technology/stevensinstituteoftechnology-satmnewsletter/v11-citm-vol111spring07.pdf";
+"~^/docs/cilture/2010-dobelli.pdf.*$" "/docs/culture/2010-dobelli.pdf";
+"~^/Danbooru2021,.*$" "/Danbooru2021";
+"~^/code$" "/index#computer-science";
+"~^/docs/genetics/selection/artificial/1957-pawson$" "/docs/genetics/selection/artificial/1957-pawson-robertbakewellpioneerlivestockbreeder.pdf";
+"~^/docs/cs/computa$" "/docs/cs/computable/index";
+"~^/Nootropics%E2.*$" "/Nootropics";
+"~^/docs/iq/2018-warne.pdf%C2%A0.*$" "/docs/iq/2018-warne.pdf";
+"~^/docs/darknet-markets/silk-road/1/2013-power/.*$" "/docs/link-bibliography/docs/darknet-markets/silk-road/1/2013-power";
+"~^/docs/www/www.quantified-mind.com/favicon.ico.*$" "http://www.quantified-mind.com/favicon.ico";
+"~^/twdne/$" "/TWDNE";
+"~^/static/build/index$" "https://github.com/gwern/gwern.net/";
+"~^/Google-Alerts.txt$" "/Google-Alerts.page";
+"~^/docs/anime/eva/2005-murakami.*$" "/docs/anime/eva/little-boy/2005-murakami";
+"~^/danbooru2021.page$" "/Danbooru2021.page";
+"~^/docs/[a-km-z]/cs/1955-nash$" "/docs/cs/cryptography/1955-nash";
+"~^/docs/science/1973-drake.pdf&cc_key.*$" "/docs/science/1973-drake.pdf";
+"~^/docs/rotten.com/library/bio/crime/criminals/noel-knoeller/photo.jpeg.*$" "/docs/rotten.com/library/bio/crime/criminals/noel-knoeller/photo.aspx.jpeg";
+"~^/docs/psychology/spaced-repetition/1939-spitzer.pdf\&.*$" "/docs/psychology/spaced-repetition/1939-spitzer.pdf";
+"~^/docs/link-bibliography/mouse-utopia.*$" "/docs/link-bibliography/Mouse-Utopia";
+"~^/Sor$" "/Sort";
+"~^/images/2013-02-04-tumblr_mhokvu9yba1re0dy6o1_640.png.*$" "/images/hardtruthsfromsoftcats.tumblr.com/2013-02-04-tumblr_mhokvu9yba1re0dy6o1_640.png";
+"~^/images/2012-10-04-tumblr_mbcse0kthn1re0dy6o1_640.png$" "/images/hardtruthsfromsoftcats.tumblr.com/2012-10-04-tumblr_mbcse0kthn1re0dy6o1_640.png";
+"~^/Photograph-of-the-Evolution.*$" "/images/design/2015-11-harvard-innovationlabs-bestreviews-evolutionofthedesk-vi.jpg/images/design/2015-11-harvard-innovationlabs-bestreviews-evolutionofthedesk-vi.jpg";
+"~^/docs/darknet$" "/docs/darknet-markets/index";
+"~^/FacGoodf.*$" "/Faces";
+"~^/docs\.bitcoin/2008-nakamoto.*$" "/docs/bitcoin/2008-nakamoto";
+"~^/Cropssharpdanbooru2019-portraits.*$" "/Crops#danbooru2019-portraits";
+"~^/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100Fr.*$" "/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt";
+"~^/docs/darknet-markets/2013-11$" "/docs/darknet-markets/index";
+"~^/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100$" "/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt";
+"~^/docs/modafinil/darknet-market/2013-08-03.hhA26bp1.*$" "/docs/darknet-markets/index";
+"~^/static/font/drop-cap/DeutscheZierschrift-N.ttf.*$" "/static/font/drop-cap/de-zs/DeutscheZierschrift-N.ttf";
+"~^/docs/psychology/2020-FNq.*$" "/docs/psychology/index";
+"~^/docs/darknet-markets/2013-DKTIz8JU.*$" "/docs/darknet-markets/index";
+"~^/docs/ai/poetry/2019-07-21-taotehching-all-uwz.*$" "/docs/ai/poetry/2019-07-21-taotehching-all-1ksamples.txt";
+"~^/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-1-$" "/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt";
+"~^/dna$" "/docs/genetics/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -27876,6 +27932,40 @@
 "~^/site.webmanifest.*$" "/static/404.html";
 "~^/.*/=3D$" "/static/404.html";
 "~^/members/.*$" "/static/404.html";
+"~^/Umbraco/.*$" "/static/404.html";
+"~^/Utility/.*$" "/static/404.html";
+"~^/pushcrew-sw.*$" "/static/404.html";
+"~^/phpsso_server/.*$" "/static/404.html";
+"~^/gwern_login.*$" "/static/404.html";
+"~^/control_panel.*$" "/static/404.html";
+"~^/configuration.*$" "/static/404.html";
+"~^/colemandetoxnetwork.*$" "/static/404.html";
+"~^/best.films.*$" "/static/404.html";
+"~^/%21W.*$" "/static/404.html";
+"~^/09-SYO.*$" "/static/404.html";
+"~^/0.519em.*$" "/static/404.html";
+"~^/\$2022.*$" "/static/404.html";
+"~^/fx/images/.*$" "/static/404.html";
+"~^/force_.*$" "/static/404.html";
+"~^/english/.*$" "/static/404.html";
+"~^/Easyfynt.*$" "/static/404.html";
+"~^/gbook/.*$" "/static/404.html";
+"~^/lmember_logined_.*$" "/static/404.html";
+"~^/kohlerrentalpower.*$" "/static/404.html";
+"~^/news_list.*$" "/static/404.html";
+"~^/\{\{revealButton.*$" "/static/404.html";
+"~^/webuploader/.*$" "/static/404.html";
+"~^/Upfile_.*$" "/static/404.html";
+"~^/trendcooks..*$" "/static/404.html";
+"~^/transvietblog..*$" "/static/404.html";
+"~^/trampolinesreviewed.*$" "/static/404.html";
+"~^/g2g1xbet.*$" "/static/404.html";
+"~^/Electron/.*$" "/static/404.html";
+"~^/.*waitfor-delay.*$" "/static/404.html";
+"~^/cgi.*$" "/static/404.html";
+"~^/.*from\(select\(sleep.*$" "/static/404.html";
+"~^/malanaz.com%2F.*$" "/static/404.html";
+"~^/.*0\+0\+0\+1.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
