--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4395,3 +4395,7 @@ default "";
 "~^/docs/fiction/2004-wolfe.pdf.*$" "/docs/fiction/gene-wolfe/2004-wolfe.pdf";
 "~^/docs/economics/perpetuities/2015-heldring.pdf.*$" "/docs/economics/perpetuities/2021-heldring.pdf";
 "~^/docs/fiction/2012-03-10-sebastianmarshall-ladyyododono.html.*$" "/docs/fiction/poetry/2012-03-10-sebastianmarshall-ladyyododono.html";
+"~^/docs/psychology/2015-beaulieuprevost.pdf.*$" "/docs/psychology/illusion-of-depth/2015-beaulieuprevost.pdf";
+"~^/docs/darknet-markets/2013-11-15-sheep-guns.maff.*$" "/docs/darknet-markets/sheep-marketplace/2013-11-15-sheep-guns.maff";
+"~^/docs/darknet-markets/2013-11-22-sheep-haydenp-profile.mht.*$" "/docs/darknet-markets/sheep-marketplace/2013-11-22-sheep-haydenp-profile.mht";
+"~^/docs/darknet-markets/2013-11-22-sheeppgp.mht.*$" "/docs/darknet-markets/sheep-marketplace/2013-11-22-sheeppgp.mht";
