--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23425,7 +23425,6 @@
 "~^/.*/docs/fiction/1207528097546.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207528097546.jpg";
 "~^/.*/docs/fiction/1207526654803.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207526654803.jpg";
 "~^/.*/docs/fiction/1207526290530.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207526290530.jpg";
-
 "~^/Bodys$" "/Crops#figures";
 "~^/Body$" "/Crops#figures";
 "~^/docs/psychology/1967-zubin%20comparativepsychopathology.pdf.*$" "/docs/psychology/1967-zubin-comparativepsychopathology.pdf";
@@ -23476,6 +23475,13 @@
 "~^/docs/ai/poetry/2019-07-21-taotehching-all-uwz.*$" "/docs/ai/poetry/2019-07-21-taotehching-all-1ksamples.txt";
 "~^/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-1-$" "/docs/ai/poetry/2019-03-16-gpt2-poetry-prefix-jabberwocky-100samples.txt";
 "~^/dna$" "/docs/genetics/index";
+"~^/AGI2025.*$" "/Scaling-hypothesis";
+"~^/docs//rotten.com/libra$" "/docs/rotten.com/library/index.html";
+"~^/docs/physcology/2021-gullich.pdf.*$" "/docs/psychology/2021-gullich.pdf";
+"~^/docs/darknet-markets/2013-06-07-namedeclined-profile$" "/docs/darknet-markets/2013-06-07-namedeclined-profile.html";
+"~^/docs/modafinil/darknet-market/2013-09-0$" "/docs/modafinil/darknet-market/2013-09-04.tar.xz";
+"~^/docs/darknet-markets/2013-11-JI.*$" "/docs/darknet-markets/index";
+"~^/docs/ai/2019-topol/.pdf.*$" "/docs/ai/nn/2019-topol.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
