--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -693,6 +693,8 @@ server {
         rewrite ^/docs/iq/fullerton/(?<old>.*)$ /docs/iq/high/fullerton/$old permanent;
         rewrite ^/docs/iq/munich/(?<old>.*)$ /docs/iq/high/munich/$old permanent;
         rewrite ^/docs/longevity/john-bjorksten/(?<old>.*)$ /docs/longevity/johan-bjorksten/$old permanent;
+        rewrite ^/docs/ai/clip/samples/(?<old>.*)$ /docs/ai/nn/transformer/clip/samples/$old permanent;
+        rewrite ^/docs/ai/clip/(?<old>.*)$ /docs/ai/nn/transformer/clip/$old permanent;
         rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
         rewrite ^/\.\/(?<all>.*)$ /$all permanent;
 
