renaming: docs/japanese/ -> docs/japan/

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -695,6 +695,7 @@ server {
         rewrite ^/docs/longevity/john-bjorksten/(?<old>.*)$ /docs/longevity/johan-bjorksten/$old permanent;
         rewrite ^/docs/ai/clip/samples/(?<old>.*)$ /docs/ai/nn/transformer/clip/samples/$old permanent;
         rewrite ^/docs/ai/clip/(?<old>.*)$ /docs/ai/nn/transformer/clip/$old permanent;
+        rewrite ^/docs/japanese/(?<old>.*)$ /docs/japan/$old permanent;
         rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
         rewrite ^/\.\/(?<all>.*)$ /$all permanent;
 
