--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -911,12 +911,12 @@ default "";
 "~^/docs/iq/smpy\/$" "/docs/iq/smpy/index";
 "~^/docs/iq/smpy/index.htm$" "/docs/iq/smpy/index";
 "~^/docs/iq/smpy/index.html$" "/docs/iq/smpy/index";
-"~^/docs/japanese\/$" "/docs/japanese/index";
-"~^/docs/japanese/index.htm$" "/docs/japanese/index";
-"~^/docs/japanese/index.html$" "/docs/japanese/index";
-"~^/docs/japanese/zeami\/$" "/docs/japanese/zeami/index";
-"~^/docs/japanese/zeami/index.htm$" "/docs/japanese/zeami/index";
-"~^/docs/japanese/zeami/index.html$" "/docs/japanese/zeami/index";
+"~^/docs/japanese\/$" "/docs/japan/index";
+"~^/docs/japanese/index.htm$" "/docs/japan/index";
+"~^/docs/japanese/index.html$" "/docs/japan/index";
+"~^/docs/japanese/zeami\/$" "/docs/japan/zeami/index";
+"~^/docs/japanese/zeami/index.htm$" "/docs/japan/zeami/index";
+"~^/docs/japanese/zeami/index.html$" "/docs/japan/zeami/index";
 "~^/docs/linkrot\/$" "/docs/linkrot/index";
 "~^/docs/linkrot/index.htm$" "/docs/linkrot/index";
 "~^/docs/linkrot/index.html$" "/docs/linkrot/index";
@@ -1096,8 +1096,8 @@ default "";
 "~^/docs/iq/munich/$" "/docs/iq/munich/index";
 "~^/docs/iq/roe/$" "/docs/iq/roe/index";
 "~^/docs/iq/smpy/$" "/docs/iq/smpy/index";
-"~^/docs/japanese/$" "/docs/japanese/index";
-"~^/docs/japanese/zeami/$" "/docs/japanese/zeami/index";
+"~^/docs/japanese/$" "/docs/japan/index";
+"~^/docs/japanese/zeami/$" "/docs/japan/zeami/index";
 "~^/docs/linkrot/$" "/docs/linkrot/index";
 "~^/docs/lithium/$" "/docs/lithium/index";
 "~^/docs/longevity/$" "/docs/longevity/index";
