--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -914,9 +914,9 @@ default "";
 "~^/docs/japanese\/$" "/docs/japan/index";
 "~^/docs/japanese/index.htm$" "/docs/japan/index";
 "~^/docs/japanese/index.html$" "/docs/japan/index";
-"~^/docs/japanese/zeami\/$" "/docs/japan/zeami/index";
-"~^/docs/japanese/zeami/index.htm$" "/docs/japan/zeami/index";
-"~^/docs/japanese/zeami/index.html$" "/docs/japan/zeami/index";
+"~^/docs/japanese/zeami\/$" "/docs/japan/poetry/zeami/index";
+"~^/docs/japanese/zeami/index.htm$" "/docs/japan/poetry/zeami/index";
+"~^/docs/japanese/zeami/index.html$" "/docs/japan/poetry/zeami/index";
 "~^/docs/linkrot\/$" "/docs/linkrot/index";
 "~^/docs/linkrot/index.htm$" "/docs/linkrot/index";
 "~^/docs/linkrot/index.html$" "/docs/linkrot/index";
@@ -1097,7 +1097,7 @@ default "";
 "~^/docs/iq/roe/$" "/docs/iq/roe/index";
 "~^/docs/iq/smpy/$" "/docs/iq/smpy/index";
 "~^/docs/japanese/$" "/docs/japan/index";
-"~^/docs/japanese/zeami/$" "/docs/japan/zeami/index";
+"~^/docs/japanese/zeami/$" "/docs/japan/poetry/zeami/index";
 "~^/docs/linkrot/$" "/docs/linkrot/index";
 "~^/docs/lithium/$" "/docs/lithium/index";
 "~^/docs/longevity/$" "/docs/longevity/index";
@@ -4399,3 +4399,47 @@ default "";
 "~^/docs/darknet-markets/2013-11-15-sheep-guns.maff.*$" "/docs/darknet-markets/sheep-marketplace/2013-11-15-sheep-guns.maff";
 "~^/docs/darknet-markets/2013-11-22-sheep-haydenp-profile.mht.*$" "/docs/darknet-markets/sheep-marketplace/2013-11-22-sheep-haydenp-profile.mht";
 "~^/docs/darknet-markets/2013-11-22-sheeppgp.mht.*$" "/docs/darknet-markets/sheep-marketplace/2013-11-22-sheeppgp.mht";
+"~^/docs/japan/1968-oneill-review:fujiwarateikassupremepoemsofourtimes.pdf.*$" "/docs/japan/poetry/teika/1968-oneill-review:fujiwarateikassupremepoemsofourtimes.pdf";
+"~^/docs/japan/1969-kato-review:fujiwarateikassupremepoemsofourtimes.pdf.*$" "/docs/japan/poetry/teika/1969-kato-review:fujiwarateikassupremepoemsofourtimes.pdf";
+"~^/docs/japan/1976-brower-fujiwarateikashundredpoemsequenceoftheshojiera-part1.pdf.*$" "/docs/japan/poetry/teika/1976-brower-fujiwarateikashundredpoemsequenceoftheshojiera-part1.pdf";
+"~^/docs/japan/1976-brower-fujiwarateikashundredpoemsequenceoftheshojiera-part2.pdf.*$" "/docs/japan/poetry/teika/1976-brower-fujiwarateikashundredpoemsequenceoftheshojiera-part2.pdf";
+"~^/docs/japan/1978-brower-fujiwarateikas100poemsequence.pdf.*$" "/docs/japan/poetry/teika/1978-brower-fujiwarateikas100poemsequence.pdf";
+"~^/docs/japan/1979-morrell-review:fujiwarateikashundredpoemsequenceoftheshojiera.pdf.*$" "/docs/japan/poetry/teika/1979-morrell-review:fujiwarateikashundredpoemsequenceoftheshojiera.pdf";
+"~^/docs/japan/1985-brower-fujiwarateikasmaigetsusho.pdf.*$" "/docs/japan/poetry/teika/1985-brower-fujiwarateikasmaigetsusho.pdf";
+"~^/docs/japan/1990-bundy-poeticapprenticeship:fujiwarateikasshogakuhyakushu.pdf.*$" "/docs/japan/poetry/teika/1990-bundy-poeticapprenticeship:fujiwarateikasshogakuhyakushu.pdf";
+"~^/docs/japan/1992-hulvey-review:thetaleofmatsurafujiwarateikasexperimentinfiction.pdf.*$" "/docs/japan/poetry/teika/1992-hulvey-review:thetaleofmatsurafujiwarateikasexperimentinfiction.pdf";
+"~^/docs/japan/1992-teika-thetaleofmatsura.pdf.*$" "/docs/japan/poetry/teika/1992-teika-thetaleofmatsura.pdf";
+"~^/docs/japan/1999-keene-seedsintheheart-teika.pdf.*$" "/docs/japan/poetry/teika/1999-keene-seedsintheheart-teika.pdf";
+"~^/docs/japan/teika.page.*$" "/docs/japan/poetry/teika/teika.page";
+"~^/docs/japan/1992-brower-conversationswithshotetsu.pdf.*$" "/docs/japan/poetry/shotetsu/1992-brower-conversationswithshotetsu.pdf";
+"~^/docs/japan/1997-carter-shotetsu-unforgottendreams.pdf.*$" "/docs/japan/poetry/shotetsu/1997-carter-shotetsu-unforgottendreams.pdf";
+"~^/docs/japan/1992-bundy-review-conversationswithshotetsu.pdf.*$" "/docs/japan/poetry/shotetsu/1992-bundy-review-conversationswithshotetsu.pdf";
+"~^/docs/japan/1999-keene-seedsintheheart-shotetsu.pdf.*$" "/docs/japan/poetry/shotetsu/1999-keene-seedsintheheart-shotetsu.pdf";
+"~^/docs/japan/1940-nippongakujutsushinkokai-manyoshu.pdf.*$" "/docs/japan/poetry/1940-nippongakujutsushinkokai-manyoshu.pdf";
+"~^/docs/japan/2004-garofalo-thehaikuandpoemsofikkyu.html.*$" "/docs/japan/poetry/2004-garofalo-thehaikuandpoemsofikkyu.html";
+"~^/docs/japan/1998-smits.pdf.*$" "/docs/japan/poetry/teika/1998-smits.pdf";
+"~^/docs/japan/2008-borgen.pdf.*$" "/docs/japan/poetry/teika/2008-borgen.pdf";
+"~^/docs/japan/1958-konishi.pdf.*$" "/docs/japan/poetry/teika/1958-konishi.pdf";
+"~^/docs/japan/1994-bundy.pdf.*$" "/docs/japan/poetry/1994-bundy.pdf";
+"~^/docs/japan/1961-brower-japanesecourtpoetry.pdf.*$" "/docs/japan/poetry/1961-brower-japanesecourtpoetry.pdf";
+"~^/docs/japan/1989-huey-kyogokutamekane.pdf.*$" "/docs/japan/poetry/teika/1989-huey-kyogokutamekane.pdf";
+"~^/docs/japan/1989-carter-waitingforthewind.pdf.*$" "/docs/japan/poetry/shotetsu/1989-carter-waitingforthewind.pdf";
+"~^/docs/japan/1972-brower-exemperorgotobassecretteachings.pdf.*$" "/docs/japan/poetry/teika/1972-brower-exemperorgotobassecretteachings.pdf";
+"~^/docs/japan/2017-tagaya.pdf.*$" "/docs/japan/poetry/teika/2017-tagaya.pdf";
+"~^/docs/japan/1976-hisamatsu-biographicaldictionaryofjapaneseliterature.pdf.*$" "/docs/japan/poetry/teika/1976-hisamatsu-biographicaldictionaryofjapaneseliterature.pdf";
+"~^/docs/japan/1976-wagner.pdf.*$" "/docs/japan/poetry/teika/1976-wagner.pdf";
+"~^/docs/japan/1978-carter.pdf.*$" "/docs/japan/poetry/shotetsu/1978-carter.pdf";
+"~^/docs/japan/1981-carter.pdf.*$" "/docs/japan/poetry/shotetsu/1981-carter.pdf";
+"~^/docs/japan/1988-brower-obituary.pdf.*$" "/docs/japan/poetry/1988-brower-obituary.pdf";
+"~^/docs/japan/1995-cranston.pdf.*$" "/docs/japan/poetry/teika/1995-cranston.pdf";
+"~^/docs/japan/1997-gatten.pdf.*$" "/docs/japan/poetry/shotetsu/1997-gatten.pdf";
+"~^/docs/japan/1999-carter.pdf.*$" "/docs/japan/poetry/shotetsu/1999-carter.pdf";
+"~^/docs/japan/2005-shino.pdf.*$" "/docs/japan/poetry/shotetsu/2005-shino.pdf";
+"~^/docs/dual-n-back/2015-ritchie.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4445388/";
+"~^/docs/algernon/2014-iossifov.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4313871/";
+"~^/docs/genetics/heritable/2019-lebowitz.pdf.*$" "https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6744345/";
+"~^/docs/darknet-markets/2011-12-15-lsd.maff.*$" "/docs/darknet-markets/silk-road/1/2011-12-15-lsd.maff";
+"~^/docs/darknet-markets/2012-04-18-vitacatreviews.maff.*$" "/docs/darknet-markets/silk-road/1/2012-04-18-vitacatreviews.maff";
+"~^/docs/darknet-markets/2013-06-07-aakoven-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-aakoven-profile.html";
+"~^/docs/darknet-markets/2013-06-07-ladylucy-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-ladylucy-profile.html";
+"~^/docs/darknet-markets/2013-06-07-namedeclined-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-namedeclined-profile.html";
