--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23520,6 +23520,8 @@
 "~^/docs/fiction/1207558417755.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207558417755.jpg";
 "~^/docs/fiction/1207577295619.gif.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207577295619.gif";
 "~^/docs/fiction/1207589984221.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207589984221.jpg";
+"~^/docs/fiction/1207595558958.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207595558958.jpg";
+"~^/docs/fiction/1207530655258.jpg.*$" "https://web.archive.org/web/20080613161523/http://4chanarchive.org/images/r9k/485038/1207530655258.jpg";
 "~^/docs/[a-km-rq-z].*/1994-falk.*$" "/docs/statistics/bayes/1994-falk";
 "~^/docs/http:/canadahq2lo3logs.onion/2019-04-22-deepdotweb-dnmlist.html.*$" "/docs/darknet-markets/2019-04-22-deepdotweb-dnmlist.html";
 "~^/docs/japan/2001-debary-sourcesofjapanesetradition.pdf.*$" "http://gen.lib.rus.ec/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
@@ -23538,11 +23540,53 @@
 "~^/s-docs-/-genetics-/-selection-/-2018--4is-ilardo.pdf.*$" "/docs/genetics/selection/natural/human/2018-ilardo.pdf";
 "~^/sandbox.*$" "/Lorem";
 "~^/static/[0-9]$" "/static/index";
+"~^/static/[0-9][0-9]$" "/static/index";
 "~^/static/font/drop-cap/Cheshire-Initials-L.ttf.*$" "/static/font/drop-cap/cheshire/Cheshire-Initials-L.ttf";
 "~^/static/font/mathjax/TeX/otf/MathJax_AMS-Regular$" "/static/font/mathjax/TeX/otf/MathJax_AMS-Regular.otf";
 "~^/docs/docs$" "/docs/index";
 "~^/docs/darknet-markets/sheep-marketplace/3D\"http:/silkroad5v7dywlc.onion/i.*$" "http://silkroad5v7dywlc.onion";
 "~^/docs/darknet-markets/sheep-marketplace/3D\"http:/sheep5u64fi457aw.onion/.*$" "http://sheep5u64fi457aw.onion";
+"~^/docs/pscyhiatry/schizophrenia/2022-jonas.pdf.*$" "/docs/psychiatry/schizophrenia/2022-jonas.pdf";
+"~^/The-3-JyI.*$" "/The-3-Grenades";
+"~^/cat/catnip$" "/docs/cat/catnip/index";
+"~^/cat/catnip/survey$" "/docs/cat/catnip/survey/index";
+"~^/cs/haskell$" "/docs/cs/haskell/index";
+"~^/docs/anime/1978...Up.*$" "/docs/anime/1978-nosaka.pdf";
+"~^/docs/cat/catnip/survey/2017-07-30-gs-pilot$" "/docs/cat/catnip/survey/2017-07-30-gs-pilot.csv";
+"~^/docs/cat/catnip/survey/2017-07-4.*$" "/docs/cat/catnip/survey/2017-07-30-gs-pilot.csv";
+"~^/docs/cat/catnip/survey/2017-08-01-gs-reversed$" "/docs/cat/catnip/survey/2017-08-01-gs-reversed.csv";
+"~^/docs/cat/catnip/survey/2017-08-1$" "/docs/cat/catnip/survey/index";
+"~^/docs/cat/catnip/survey/2017-08-10-gs-australia$" "/docs/cat/catnip/survey/2017-08-10-gs-australia.csv";
+"~^/docs/darknet-markets/agora/2014-12-1$" "/docs/darknet-markets/agora/2014-12-17-agora-willyclock-complaint.pdf";
+"~^/docs/darknet-markets/agora/2014-12-22-8.*$" "/docs/darknet-markets/agora/2014-12-22-pacer-willyclock.maff";
+"~^/docs/darknet-markets/agora/2015-02-1$" "/docs/darknet-markets/agora/2015-02-22-agora-fremblingdocket.maff";
+"~^/docs/darknet-markets/agora/2015-1$" "/docs/darknet-markets/agora/2015-12-07-fbi-uscitizendeportedfromuganda.html";
+"~^/docs/economics/2020-1$" "/docs/economics/index";
+"~^/docs/lesswrong-survey/2013-07-22-sand-lwpoll$" "/docs/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
+"~^/docs/nootropic/quantified-self/2014-08-08-lllt-correlation-factoranalysis$" "/docs/nootropic/quantified-self/2014-08-08-lllt-correlation-factoranalysis.csv";
+"~^/docs/personal/2011-gwern-yourmorals.org/current_events_process$" "/docs/personal/2011-gwern-yourmorals.org/current_events_process.html";
+"~^/docs/philosophy/epistemology/2010-yvain-inverselawofscientificnomenclature$" "/docs/philosophy/epistemology/2010-yvain-inverselawofscientificnomenclature.html";
+"~^/docs/psychology/2006-02-05-nytimes-thatwhichdoesnotkillmemakesmestranger$" "/docs/psychology/2006-02-05-nytimes-thatwhichdoesnotkillmemakesmestranger.html";
+"~^/docs/psychology/2006-1$" "/docs/psychology/index";
+"~^/docs/psychology/writing/1990-parisreview-irismurdochinterview$" "/docs/psychology/writing/1990-parisreview-irismurdochinterview.html";
+"~^/docs/psychology/writing/2018-10-27-googlesurveys-morningwriting$" "/docs/psychology/writing/2018-10-27-googlesurveys-morningwriting.csv";
+"~^/docs/sociology/2021-bender$" "/docs/sociology/2021-bender.html";
+"~^/docs/statistics/causality/2001-thompson$" "/docs/statistics/causality/2001-thompson.html";
+"~^/docs/statistics/causality/2015-setter$" "/docs/statistics/causality/2015-setter.html";
+"~^/docs/statistics/cs/1955-nash.*$" "/docs/cs/cryptography/1955-nash.page";
+"~^/docs/statistics/decision/2016-08-20-candyjapan-decisiontree-n9$" "/docs/statistics/decision/2016-08-20-candyjapan-decisiontree-n9.csv";
+"~^/docs/traffic/2011-gwernnet-nfsncosts$" "/docs/traffic/2011-gwernnet-nfsncosts.maff";
+"~^/economics/advertising.*$" "/docs/economics/advertising/index";
+"~^/economics/automation.*$" "/docs/economics/automation/index";
+"~^/existential-risk.*$" "/docs/existential-risk/index";
+"~^/haskell/goodreadsToMarkdown$" "/haskell/goodreadsToMarkdown.hs";
+"~^/images/maildelivery/simulated-inferencesamplebysample$" "/images/maildelivery/simulated-inferencesamplebysample.webm";
+"~^/lesswrong-survey$" "/docs/lesswrong-survey/index";
+"~^/modafinil/darknet-market$" "/docs/modafinil/darknet-market/index";
+"~^/nero$" "https://en.wikipedia.org/wiki/Nero";
+"~^/psychology/okcupid$" "/docs/psychology/okcupid/index";
+"~^/reinforcement-learning/armstrong-controlproblem$" "/docs/reinforcement-learning/armstrong-controlproblem/index";
+"~^/static/build/markdown-lint$" "/static/build/markdown-lint.sh";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28034,7 +28078,6 @@
 "~^/malanaz.com%2F.*$" "/static/404.html";
 "~^/.*0\+0\+0\+1.*$" "/static/404.html";
 "~^/.*-AND-2\*3\*8\=.*$" "/static/404.html";
-"~^/.*-FROM-PG_SLEEP.*15.*$" "/static/404.html";
 "~^/vpns/.*$" "/static/404.html";
 "~^/docs/www/gsa-online.de.*$" "/static/404.html";
 "~^/zhzh.info.*$" "/static/404.html";
@@ -28059,6 +28102,8 @@
 "~^/breastenlargementinturk.*$" "/static/404.html";
 "~^/4betslot.*$" "/static/404.html";
 "~^/bit.ly%2F3eFvOdI.*$" "/static/404.html";
+"~^/.*-PG_SLEEP.*$" "/static/404.html";
+"~^/celebszone.*$" "/static/404.html";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
@@ -28067,3 +28112,5 @@
 "~(?<u>.*)/trackback$" "$u";
 "~(?<u>.*)/trackback/$" "$u";
 "~(?<u>.*)\'$" "$u";
+
+"~^/Danbooru2022.*$" "/Danbooru2021"; # WARNING: TO REMOVE in JANUARY 2023
