--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4443,3 +4443,5 @@ default "";
 "~^/docs/darknet-markets/2013-06-07-aakoven-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-aakoven-profile.html";
 "~^/docs/darknet-markets/2013-06-07-ladylucy-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-ladylucy-profile.html";
 "~^/docs/darknet-markets/2013-06-07-namedeclined-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-namedeclined-profile.html";
+"~^/docs/ai/scaling/2008-sandberg-wholebrainemulationroadmap.pdf.*$" "/docs/ai/scaling/hardware/2008-sandberg-wholebrainemulationroadmap.pdf";
+"~^/docs/genetics/heritable/2019-shi.pdf.*$" "/docs/genetics/heritable/rare-variants/2019-shi.pdf";
