--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -697,7 +697,10 @@ server {
         rewrite ^/docs/ai/clip/(?<old>.*)$ /docs/ai/nn/transformer/clip/$old permanent;
         rewrite ^/docs/japanese/(?<old>.*)$ /docs/japan/$old permanent;
         rewrite ^/docs/japan/zeami/(?<old>.*)$ /docs/japan/poetry/zeami/$old permanent;
-        rewrite ^/(?<original>.*)/[0-9]$ /docs/$original permanent;
+        rewrite ^/(?<original>docs/.*)/[0-9]$ /$original permanent;
+        rewrite ^/(?<original>docs/.*)/[0-9][0-9]$ /$original permanent;
+        rewrite ^/(?<original>docs/.*)/[0-9][0-9][0-9]$ /$original permanent;
+        rewrite ^/(?<original>docs/.*)/[0-9][0-9][0-9][0-9]$ /$original permanent;
         rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
         rewrite ^/\.\/(?<all>.*)$ /$all permanent;
 
