--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -695,6 +695,7 @@ server {
         rewrite ^/docs/longevity/john-bjorksten/(?<old>.*)$ /docs/longevity/johan-bjorksten/$old permanent;
         rewrite ^/docs/ai/clip/samples/(?<old>.*)$ /docs/ai/nn/transformer/clip/samples/$old permanent;
         rewrite ^/docs/ai/clip/(?<old>.*)$ /docs/ai/nn/transformer/clip/$old permanent;
+        rewrite ^/docs/ai/sparsity/(?<old>.*)$ /docs/ai/nn/sparsity/$old permanent;
         rewrite ^/docs/japanese/(?<old>.*)$ /docs/japan/$old permanent;
         rewrite ^/docs/japan/zeami/(?<old>.*)$ /docs/japan/poetry/zeami/$old permanent;
         rewrite ^/(?<original>docs/.*)/[0-9]$ /$original permanent;
