--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -21965,7 +21965,7 @@
 "~^/hanson.gmu.edu/deceive.pdf.*$" "http://mason.gmu.edu/~rhanson/deceive.pdf";
 "~^/docs/predictions/2001-armstrong-princi-plesforecasting.pdf.*$" "/docs/prediction/2001-armstrong-principlesforecasting.pdf";
 "~^/docs/personal/yourmorals.org/disgust_process.html.*$" "/docs/personal/2011-gwern-yourmorals.org/disgust_process.html";
-"~^/docs/link-bibliography/notes/Sparsity.*$" "/docs/ai/sparsity/index";
+"~^/docs/link-bibliography/notes/Sparsity.*$" "/docs/ai/nn/sparsity/index";
 "~^/media-centre/news/afp/2013/july/media-release-joint-operation-results-in-significant-offshore-disruption.aspx.*$" "https://www.afp.gov.au/media-centre/news/afp/2013/july/media-release-joint-operation-results-in-significant-offshore-disruption.aspx";
 "~^/A-Study-in-Emerald.*$" "https://en.wikipedia.org/wiki/A_Study_in_Emerald";
 "~^/static/linkArchive.sh.html.*$" "/static/build/linkArchive.sh.html";
