--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -2894,10 +2894,10 @@ default "";
 "~^/notes/IQ-Income$" "/docs/iq/ses/index";
 "~^/notes/IQ-Income\.page$" "/docs/iq/ses/index.page";
 "~^/notes/IQ-Income.*$" "/docs/iq/ses/index";
-"~^/docs/ai/2018-cheng.pdf.*$" "/docs/ai/sparsity/2018-cheng.pdf";
-"~^/notes/Sparsity$" "/docs/ai/sparsity/index";
-"~^/notes/Sparsity\.page$" "/docs/ai/sparsity/index.page";
-"~^/notes/Sparsity.*$" "/docs/ai/sparsity/index";
+"~^/docs/ai/2018-cheng.pdf.*$" "/docs/ai/nn/sparsity/2018-cheng.pdf";
+"~^/notes/Sparsity$" "/docs/ai/nn/sparsity/index";
+"~^/notes/Sparsity\.page$" "/docs/ai/nn/sparsity/index.page";
+"~^/notes/Sparsity.*$" "/docs/ai/nn/sparsity/index";
 "~^/docs/economics/1989-david.pdf.*$" "/docs/economics/automation/1989-david.pdf";
 "~^/docs/economics/1990-david.pdf.*$" "/docs/economics/automation/1990-david.pdf";
 "~^/docs/economics/1998-brynjolfsson.pdf.*$" "/docs/economics/automation/1998-brynjolfsson.pdf";
@@ -4445,3 +4445,5 @@ default "";
 "~^/docs/darknet-markets/2013-06-07-namedeclined-profile.html.*$" "/docs/darknet-markets/silk-road/1/2013-06-07-namedeclined-profile.html";
 "~^/docs/ai/scaling/2008-sandberg-wholebrainemulationroadmap.pdf.*$" "/docs/ai/scaling/hardware/2008-sandberg-wholebrainemulationroadmap.pdf";
 "~^/docs/genetics/heritable/2019-shi.pdf.*$" "/docs/genetics/heritable/rare-variants/2019-shi.pdf";
+"~^/docs/ai/1998-moravec-figure2-evolutionofcomputerpowercost19001998.csv.*$" "/docs/ai/scaling/hardware/1998-moravec-figure2-evolutionofcomputerpowercost19001998.csv";
+"~^/docs/ai/sparsity/1993-hassibi.pdf.*$" "/docs/ai/nn/sparsity/pruning/1993-hassibi.pdf";
