--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23582,6 +23582,15 @@
 "~^/reinforcement-learning/armstrong-controlproblem$" "/docs/reinforcement-learning/armstrong-controlproblem/index";
 "~^/static/build/markdown-lint$" "/static/build/markdown-lint.sh";
 "~^/static/font/drop-cap/Cheshire-Initials-F.ttf.*$" "/static/font/drop-cap/cheshire/Cheshire-Initials-F.ttf";
+"~^/dnb-cache.*" "/DNB-FAQ";
+"~^/docs/histo-ry/2000-bright.pdf.*$" "/docs/history/2000-bright.pdf";
+"~^/docs/iq/192-0-thorndike.pdf.*$" "/docs/iq/1920-thorndike.pdf";
+"~^/Portia$" "/docs/biology/portia/index";
+"~^/P\!=NP.*$" "https://en.wikipedia.org/wiki/P_versus_NP_problem";
+"~^/static/index$" "https://en.wikipedia.org/wiki/P_versus_NP_problem";
+"~^/docs/iq/2015-strenze.pdf\[0.*$" "/docs/iq/2015-strenze.pdf";
+"~^/docs/darknet-markets/agora/2015-02-22$" "/docs/darknet-markets/agora/2015-02-22-agora-fremblingdocket.maff";
+"~^/docs/darknet-markets/pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-09.pdf.*$" "/docs/darknet-markets/william-pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-09.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28099,6 +28108,7 @@
 "~^/bit.ly%2F3eFvOdI.*$" "/static/404.html";
 "~^/.*-PG_SLEEP.*$" "/static/404.html";
 "~^/celebszone.*$" "/static/404.html";
+"~^/.*alfacgiapi.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
