--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3169,7 +3169,7 @@ default "";
 "~^/static/build/embed.hs.*$" "/static/build/generateSimilar.hs";
 "~^/docs/biology/2020-gour.pdf.*$" "/docs/psychology/neuroscience/2020-gour.pdf";
 "~^/docs/biology/2020-abbott.pdf.*$" "/docs/psychology/neuroscience/2020-abbott.pdf";
-"~^/docs/ai/2016-covington.pdf.*$" "/docs/ai/retrieval/2016-covington.pdf";
+"~^/docs/ai/2016-covington.pdf.*$" "/docs/ai/nn/retrieval/2016-covington.pdf";
 "~^/docs/economics/2021-bannerjee.pdf.*$" "/docs/economics/2021-banerjee.pdf";
 "~^/docs/economics/2015-heldring.pdf.*$" "/docs/economics/perpetuities/2015-heldring.pdf";
 "~^/docs/economics/2007-schneider.pdf.*$" "/docs/economics/perpetuities/2007-schneider.pdf";
@@ -4447,3 +4447,20 @@ default "";
 "~^/docs/genetics/heritable/2019-shi.pdf.*$" "/docs/genetics/heritable/rare-variants/2019-shi.pdf";
 "~^/docs/ai/1998-moravec-figure2-evolutionofcomputerpowercost19001998.csv.*$" "/docs/ai/scaling/hardware/1998-moravec-figure2-evolutionofcomputerpowercost19001998.csv";
 "~^/docs/ai/sparsity/1993-hassibi.pdf.*$" "/docs/ai/nn/sparsity/pruning/1993-hassibi.pdf";
+"~^/docs/design/typography/1990-tufte-envisioninginformation-ch5-byrneseuclid.pdf.*$" "/docs/design/typography/rubrication/1990-tufte-envisioninginformation-ch5-byrneseuclid.pdf";
+"~^/docs/design/typography/2010-03-dowlingduncan-charteroftheforest.html.*$" "/docs/design/typography/rubrication/2010-03-dowlingduncan-charteroftheforest.html";
+"~^/docs/design/typography/2010-p22-civilite-typespecimen.pdf.*$" "/docs/design/typography/rubrication/2010-p22-civilite-typespecimen.pdf";
+"~^/docs/design/typography/2017-walker.pdf.*$" "/docs/design/typography/rubrication/2017-walker.pdf";
+"~^/docs/genetics/heritable/correlation/2020-choi.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2020-choi.pdf";
+"~^/docs/genetics/heritable/correlation/2016-day.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2016-day.pdf";
+"~^/docs/japan/2001-12-samuels-kishiandcorruptionananatomyofthe1955system.html.*$" "/docs/japan/history/2001-12-samuels-kishiandcorruptionananatomyofthe1955system.html";
+"~^/docs/japan/1983-seidensticker-genji.pdf.*$" "/docs/japan/poetry/1983-seidensticker-genji.pdf";
+"~^/docs/japan/1974-scheiner-modernjapan.pdf.*$" "/docs/japan/history/1974-scheiner-modernjapan.pdf";
+"~^/docs/japan/1997-tsuzuki-tokyoacertainstyle.pdf.*$" "/docs/japan/art/1997-tsuzuki-tokyoacertainstyle.pdf";
+"~^/docs/japan/2005-kanda.pdf.*$" "/docs/japan/art/2005-kanda.pdf";
+"~^/docs/japan/2011-rassieur.pdf.*$" "/docs/japan/art/2011-rassieur.pdf";
+"~^/docs/japan/2022-kawai.pdf.*$" "/docs/japan/history/2022-kawai.pdf";
+"~^/docs/history/1979-vogel-japanasnumberone.pdf.*$" "/docs/japan/history/1979-vogel-japanasnumberone.pdf";
+"~^/docs/history/1937-sadler-themakerofmodernjapan-thelegacyofieyasu.pdf.*$" "/docs/japan/history/1937-sadler-themakerofmodernjapan-thelegacyofieyasu.pdf";
+"~^/docs/history/1919-gubbins-thelegacyofieyasu.pdf.*$" "/docs/japan/history/1919-gubbins-thelegacyofieyasu.pdf";
+"~^/docs/history/1874-lowder-thelegacyofieyasu.pdf.*$" "/docs/japan/history/1874-lowder-thelegacyofieyasu.pdf";
