--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23591,6 +23591,17 @@
 "~^/docs/iq/2015-strenze.pdf\[0.*$" "/docs/iq/2015-strenze.pdf";
 "~^/docs/darknet-markets/agora/2015-02-22$" "/docs/darknet-markets/agora/2015-02-22-agora-fremblingdocket.maff";
 "~^/docs/darknet-markets/pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-09.pdf.*$" "/docs/darknet-markets/william-pickard/2003-pickard-lsd-trial-transcript-gordontoddskinner-09.pdf";
+"~^/[Oo]pera.*$" "/reviews/Operas";
+"~^/reviews/[Oo]pera$" "/reviews/Operas";
+"~^/reviews/operas.*" "/reviews/Operas";
+"~^/docs/rotten.com/lil$" "/docs/rotten.com/library/index.html";
+"~^/docs/sunk-cost/2015-danielmead-alwaysastarterneverafinisher$" "/docs/sunk-cost/2015-danielmead-alwaysastarterneverafinisher.html";
+"~^/docs/darknet-markets/2013-08-14-gwernforumdiscussion.html$" "/docs/darknet-markets/2013-08-14-gwernforumdiscussion.html.maff";
+"~^/static/build/0$" "/static/build/index";
+"~^/buid$" "/static/build/index";
+"~^/docs/psychology/2020-10$" "/docs/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/In-Defense$" "/In-Defense-Of-Inclusionism";
+"~^/In-Defense-of$" "/In-Defense-Of-Inclusionism";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28109,6 +28120,7 @@
 "~^/.*-PG_SLEEP.*$" "/static/404.html";
 "~^/celebszone.*$" "/static/404.html";
 "~^/.*alfacgiapi.*$" "/static/404";
+"~^/Big.*Cock.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
