--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4464,3 +4464,9 @@ default "";
 "~^/docs/history/1937-sadler-themakerofmodernjapan-thelegacyofieyasu.pdf.*$" "/docs/japan/history/1937-sadler-themakerofmodernjapan-thelegacyofieyasu.pdf";
 "~^/docs/history/1919-gubbins-thelegacyofieyasu.pdf.*$" "/docs/japan/history/1919-gubbins-thelegacyofieyasu.pdf";
 "~^/docs/history/1874-lowder-thelegacyofieyasu.pdf.*$" "/docs/japan/history/1874-lowder-thelegacyofieyasu.pdf";
+"~^/docs/genetics/heritable/2020-yeung.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2020-yeung.pdf";
+"~^/docs/genetics/heritable/correlation/2020-aroe.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2020-aroe.pdf";
+"~^/docs/genetics/heritable/correlation/2020-schnurr.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2020-schnurr.pdf";
+"~^/docs/genetics/heritable/correlation/2020-zhou.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2020-zhou.pdf";
+"~^/docs/genetics/heritable/correlation/2021-daghlas.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2021-daghlas.pdf";
+"~^/docs/genetics/heritable/2021-yengo.pdf.*$" "/docs/genetics/heritable/rare-variants/2021-yengo.pdf";
