rename /metadata/partial.yaml to half.yaml as it gets increasingly confusing with 'partial' annotations & making understanding LM.hs much harder

--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4470,3 +4470,4 @@ default "";
 "~^/docs/genetics/heritable/correlation/2020-zhou.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2020-zhou.pdf";
 "~^/docs/genetics/heritable/correlation/2021-daghlas.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2021-daghlas.pdf";
 "~^/docs/genetics/heritable/2021-yengo.pdf.*$" "/docs/genetics/heritable/rare-variants/2021-yengo.pdf";
+"~^/metadata/partial.yaml$" "/metadata/half.yaml";
