--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23602,6 +23602,17 @@
 "~^/docs/psychology/2020-10$" "/docs/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
 "~^/In-Defense$" "/In-Defense-Of-Inclusionism";
 "~^/In-Defense-of$" "/In-Defense-Of-Inclusionism";
+"~^/docs/sociology/2018-levari$" "/docs/sociology/2018-levari.pdf";
+"~^/AI-mirrorworlds.*$" "https://www.wired.com/story/mirrorworld-ar-next-big-tech-platform/";
+"~^/triple-entry$" "https://en.wikipedia.org/wiki/Momentum_accounting_and_triple-entry_bookkeeping";
+"~^/Melon%2914.*$" "/Melon";
+"~^/docs/histo$" "/docs/history/index";
+"~^/docs/darknet-markets/2013-11-15-sheep-guns$" "/docs/darknet-markets/sheep-marketplace/2013-11-15-sheep-guns.maff";
+"~^/docs/psychology/personality/conscientiousness/2009-poropat.pd\\f$" "/docs/psychology/personality/conscientiousness/2009-poropat.pdf";
+"~^/DNB-meta-an$" "/DNB-meta-analysis";
+"~^/Laroi.*$" "/LARPing";
+"~^/notes/Lizard$" "/notes/Lizardman-constant";
+"~^/docs/ai/poetry/2019-07-19-taotehching-ch1$" "/docs/ai/poetry/2019-07-19-taotehching-ch1-1ksamples.txt";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28121,6 +28132,10 @@
 "~^/celebszone.*$" "/static/404.html";
 "~^/.*alfacgiapi.*$" "/static/404";
 "~^/Big.*Cock.*$" "/static/404";
+"~^/Caras$" "/static/404";
+"~^/docs/touhou/little.*$" "/static/404";
+"~^/.*/fetch_frame$" "/static/404";
+"~^/.*slotbet138.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
