--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23613,6 +23613,7 @@
 "~^/Laroi.*$" "/LARPing";
 "~^/notes/Lizard$" "/notes/Lizardman-constant";
 "~^/docs/ai/poetry/2019-07-19-taotehching-ch1$" "/docs/ai/poetry/2019-07-19-taotehching-ch1-1ksamples.txt";
+"~^/docs/2017-hpmor-revie.*$" "/docs/lesswrong-survey/hpmor/2017-hpmor-reviews.csv";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28136,6 +28137,10 @@
 "~^/docs/touhou/little.*$" "/static/404";
 "~^/.*/fetch_frame$" "/static/404";
 "~^/.*slotbet138.*$" "/static/404";
+"~^/DarkMode.setMode.*$" "/static/404";
+"~^/DarkMode.didSetMode.*$" "/static/404";
+"~^/M20.722,24.964c0.*$" "/static/404";
+"~^/.*2g1bet.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
