--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4471,3 +4471,11 @@ default "";
 "~^/docs/genetics/heritable/correlation/2021-daghlas.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2021-daghlas.pdf";
 "~^/docs/genetics/heritable/2021-yengo.pdf.*$" "/docs/genetics/heritable/rare-variants/2021-yengo.pdf";
 "~^/metadata/partial.yaml$" "/metadata/half.yaml";
+"~^/docs/psychology/2022-crampton.pdf.*$" "/docs/psychology/bird/2022-crampton.pdf";
+"~^/docs/psychology/neuroscience/2022-sol.pdf.*$" "/docs/psychology/bird/neuroscience/2022-sol.pdf";
+"~^/docs/psychology/neuroscience/2015-swift.pdf.*$" "/docs/psychology/bird/2015-swift.pdf";
+"~^/docs/psychology/neuroscience/2020-herculanohouzel.pdf.*$" "/docs/psychology/bird/neuroscience/2020-herculanohouzel.pdf";
+"~^/docs/psychology/neuroscience/2021-kirschhock.pdf.*$" "/docs/psychology/bird/neuroscience/2021-kirschhock.pdf";
+"~^/docs/psychology/neuroscience/2020-nieder.pdf.*$" "/docs/psychology/bird/neuroscience/2020-nieder.pdf";
+"~^/docs/psychology/neuroscience/2020-stacho.pdf.*$" "/docs/psychology/bird/neuroscience/2020-stacho.pdf";
+"~^/docs/psychology/2017-hammers.pdf.*$" "/docs/psychology/bird/2017-hammers.pdf";
