--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -5367,7 +5367,7 @@
 "~^/docs/static/js/rewrite\.js$" "/static/js/rewrite.js";
 "~^/docs/static/js/sidenotes\.js$" "/static/js/sidenotes.js";
 "~^/zeo/static/js/sidenotes\.js$" "/static/js/sidenotes.js";
-"~^/static/metadata/custom\.hs$" "/metadata/custom.yaml";
+"~^/static/metadata/custom\.hs$" "/metadata/full.yaml";
 "~^/static/redirects/Redirects2\.hs$" "/static/redirects/nginx.conf";
 "~^/static/redirects/Redirects\.hs$" "/static/redirects/nginx.conf";
 "~^/statistical-notes$" "/Statistical-notes";
@@ -14945,9 +14945,9 @@
 "~^/images/ai/2019-l%E2%80%A6$" "/images/ai/2019-lecun-isscctalk-cake.png";
 "~^/images/ai/20%E2%80%A6$" "/images/ai/index.html";
 "~^/robot.txt$" "/robots.txt";
-"~^/static/custom.yaml$" "/metadata/custom.yaml";
-"~^/custom.yaml$" "/metadata/custom.yaml";
-"~^/custom.yml$" "/metadata/custom.yaml";
+"~^/static/custom.yaml$" "/metadata/full.yaml";
+"~^/custom.yaml$" "/metadata/full.yaml";
+"~^/custom.yml$" "/metadata/full.yaml";
 "~^/docs/1995-rosati-good.pdf.*$" "/docs/philo/1995-rosati-good.pdf";
 "~^/docs/1996-levin.pdf$" "/docs/nicotine/1996-levin.pdf";
 "~^/docs/creatine/dx.doi.org/10.1016/j.neulet.2010.05.054$" "/docs/creatine/2010-hammett.pdf";
@@ -23614,6 +23614,12 @@
 "~^/notes/Lizard$" "/notes/Lizardman-constant";
 "~^/docs/ai/poetry/2019-07-19-taotehching-ch1$" "/docs/ai/poetry/2019-07-19-taotehching-ch1-1ksamples.txt";
 "~^/docs/2017-hpmor-revie.*$" "/docs/lesswrong-survey/hpmor/2017-hpmor-reviews.csv";
+"~^/docs/genetics/correlation$" "/docs/genetics/heritable/correlation/index";
+"~^/Mouse-Utopi$" "/Mouse-Utopia";
+"~^/.*write-review.php\?identifier=mathematiciansmi033496mbp.*$" "https://archive.org/details/mathematiciansmi033496mbp";
+"~^/static/font/drop-cap/GoudyInitialen-Q.ttf.*$" "/static/font/drop-cap/goudy/GoudyInitialen-Q.ttf";
+"~^/static/font/drop-cap/Cheshire-Initials-P.ttf.*$" "/static/font/drop-cap/cheshire/Cheshire-Initials-P.ttf";
+"~^/docs/ai/1988-lang$" "/docs/ai/1988-lang.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28141,6 +28147,7 @@
 "~^/DarkMode.didSetMode.*$" "/static/404";
 "~^/M20.722,24.964c0.*$" "/static/404";
 "~^/.*2g1bet.*$" "/static/404";
+"~^/multiflay.com.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
