--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -18,7 +18,7 @@ default "";
 "~^/sync-gwern.net.sh$" "/static/build/sync-gwern.net.sh";
 "~^/static/metadata/archive.hs$" "/metadata/archive.hs";
 "~^/static/metadata/auto.yaml$" "/metadata/auto.yaml";
-"~^/static/metadata/custom.yaml$" "/metadata/custom.yaml";
+"~^/static/metadata/custom.yaml$" "/metadata/full.yaml";
 "~^/images/logo/logo-smooth.svg$" "/static/img/logo/logo-smooth.svg";
 "~^/images/logo/logo-smooth-appletouch.png$" "/static/img/logo/logo-smooth-appletouch.png";
 "~^/images/logo-christmas.jpg$" "/static/img/logo/logo-christmas.jpg";
@@ -4479,3 +4479,5 @@ default "";
 "~^/docs/psychology/neuroscience/2020-nieder.pdf.*$" "/docs/psychology/bird/neuroscience/2020-nieder.pdf";
 "~^/docs/psychology/neuroscience/2020-stacho.pdf.*$" "/docs/psychology/bird/neuroscience/2020-stacho.pdf";
 "~^/docs/psychology/2017-hammers.pdf.*$" "/docs/psychology/bird/2017-hammers.pdf";
+"~^/docs/ai/1988-lang.pdf.*$" "/docs/ai/nn/fully-connected/1988-lang.pdf";
+"~^/metadata/custom.yaml.*$" "/metadata/full.yaml";
